# ipcalc

./: .gitignore  AGENTS.md  CLAUDE.md  MCP_SERVER.md  README.md  index.html  ipcalc  ipcalc.sh  jsrepo.json  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
api/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_api.py  test_quick.py
api/config/: __init__.py  cloud_providers.py
api/core/: __init__.py  ip_calculator.py
api/diagrams/: __init__.py  generator.py
api/diagrams/templates/: __init__.py  azure.py
api/examples/: example_client.py
api/models/: __init__.py  requests.py  subnet.py
api/routers/: calculate.py  diagrams.py
api/src/: __init__.py  diagram_generator.py  ip_calculator.py  main.py
api/tests/: __init__.py  test_api.py  test_calculator.py
docs/: ALICLOUD.md  API.md  (+11 more)
skills/ipcalc-for-cloud/: FEATURE_COMPARISON.md  IMPLEMENTATION_STATUS.md  README.md  SKILL.md  USAGE.md  pyproject.toml  requirements-dev.txt  requirements.txt
skills/ipcalc-for-cloud/evals/: trigger_eval.json
skills/ipcalc-for-cloud/references/: internals.md
skills/ipcalc-for-cloud/scripts/: cloud_provider_config.py  diagram_generator.py  ipcalc.py  template_processor.py  test_diagram_generator.py  test_ipcalc.py
skills/ipcalc-for-cloud/templates/: aws.tf.j2  azure.tf.j2
skills/ipcalc-for-cloud/templates/alicloud/: aliyun.template.sh  terraform.template.tf
skills/ipcalc-for-cloud/templates/aws/: cli.template.sh  cloudformation.template.yaml  terraform.template.tf
skills/ipcalc-for-cloud/templates/azure/: arm.template.json  bicep.template.bicep  terraform.template.tf
skills/ipcalc-for-cloud/templates/gcp/: gcloud.template.sh  terraform.template.tf
skills/ipcalc-for-cloud/templates/oracle/: oci.template.sh
(+114 files in other folders)
