[project]
name = "ipcalc-api"
version = "0.1.0"
description = "FastAPI server for ipcalc IaC code generation"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "py-d2>=1.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
